--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
       <section id="CEV" class="">
         <div class="flex">
           <div class="narrow">
-            <h2 style="page-break-before:avoid;"><strong>Cultura en Vena</strong> </h2 >
+            <h1 style="page-break-before:avoid; margin-top: 0.618em;">Cultura en Vena </h1 >
             <div class="section_image alt_img" style="width: 38%">
               <img src="assets/img/logo_normal.png" alt="logotipo de Cultura en Vena" >
               
             </div>
-            <h3 class="book">Branding, 2021</h3>
-            <h5 class="book">Proyectos interdisciplinares de diseño gráfico</h5>
+            <p>Branding, 2021</p>
+            <p>Proyectos interdisciplinares de diseño gráfico</p>
   
           </div>
           <div class="wide">
-            <h4>Objetivos del proyecto</h4>
+            <h2 style="margin-top: 5em;page-break-before:avoid;">Objetivos del proyecto</h2>
             <p>Nos encomendaron elaborar un sistema de diseño para <a href="https://www.culturaenvena.org/">Cultura en Vena</a>, una asociación que busca llevar el bienestar a las personas a través de la cultura.</p>
             <p>
               Este sistema debía ser flexible, coherente y ser comprensible para poderse implementar. Tenía que poderse aplicar a publicaciones audiovisuales, digitales e impresas.
@@ -121,7 +121,7 @@
                 <li>Sensible</li>
                 <li>Moderno</li>
             </ul>
-            <h4>Nuestra solución</h4>
+            <h2 style="page-break-before:avoid;">Nuestra solución</h2>
             <p>
               Analizando la realidad de nuestro cliente, una fundación sin ánimo de lucro y que funciona a base de voluntariado, hemos querido proporcionar dos cosas:
               
@@ -806,7 +806,7 @@
 
 
     <footer class="footer">
-      <p style="color: white;">Proyecto realizado por...</p>
+      <p style="color: white; font-weight: bold;">Proyecto realizado por...</p>
       <div class="flex">
         <div class="alumno">
           <p>David Chavarri</p>
@@ -827,7 +827,10 @@
 
 
       </div>
-      <p style="color: white;">Alumnos de Diseño Gráfico de la Escuela Superior de Diseño de Madrid. Curso 2020-2021</p>
+      <div class="flex">
+        <p  class="wide" style="color: white; font-weight: bold;">Alumnos de Diseño Gráfico de la Escuela Superior de Diseño de Madrid. Curso 2020-2021</p>
+        <a class="onyellow" href="pages/previo.html">Desarrollo del Proyecto</a>
+      </div>
     </footer>
   </div>
   <script type="module" src="/app/main.js"></script>
