--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p>
               Este sistema debía ser flexible, coherente y ser comprensible para poderse implementar. Tenía que poderse aplicar a publicaciones audiovisuales, digitales e impresas.
             </p>
-            <p>Como vimos en los <a href="previo.html">pasos anteriores de nuestro Proyecto</a>, Las características que debía cumplir nuestro sistema eran las siguientes:</p>
+            <p>Como vimos en los <a href="pages/previo.html">pasos anteriores de nuestro Proyecto</a>, Las características que debía cumplir nuestro sistema eran las siguientes:</p>
             <ul>
               <li>Cercano / cálido</li>
                 <li>Entretenido</li>
@@ -829,7 +829,7 @@
       </div>
       <div class="flex">
         <p  class="wide" style="color: white; font-weight: bold;">Alumnos de Diseño Gráfico de la Escuela Superior de Diseño de Madrid. Curso 2020-2021</p>
-        <a class="onyellow" href="previo.html">Desarrollo del Proyecto</a>
+        <a class="onyellow" href="pages/previo.html">Desarrollo del Proyecto</a>
       </div>
     </footer>
   </div>
