--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
             </div>
             <div class="w50">
               <div class="iframe_container">
-                <iframe width='100%' height='100%' src="https://www.youtube.com/embed/3mqyFiUtXEQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width='100%' height='100%' src="https://www.youtube.com/embed/HS0KRaTM0qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class='section_image alt_img' style="margin: 16px 0">
                 <img
@@ -787,7 +787,7 @@
                   alt="Cartel demonstrativo de la retícula">
               </div>
               
-              <a href="https://youtu.be/3mqyFiUtXEQ" class="alt_img">Muestra de Rotulación. Canal de YouTube: Elena Valea Santos</a>
+              <a href="https://youtu.be/HS0KRaTM0qs" class="alt_img">Muestra de Rotulación. Canal de YouTube: Elena Valea Santos</a>
             </div>
           </div>
           
