--- a/index.html
+++ b/index.html
@@ -741,8 +741,16 @@
           <div class="narrow">
             <p>Utilizamos la imagen en blanco y negro y las formas son las que aportan el color y la vitalidad a la imagen. Su movimiento y su aparición reacciona al sonido y a las sensaciones que nos transmite la pieza mostrada.</p>
           </div>
+          <div class="w50">
+            <div class="iframe_container">
+              <iframe width='100%' height='100%' src="https://www.youtube.com/embed/vKItEPfHYNA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <a href="https://youtu.be/hBgsDegTTrY" class="alt_img">Presentación Cultura en Vena. Canal de YouTube: Elena Valea Santos </a>
+
+          </div>
         
             <div class="w50">
+              
               <div class="iframe_container">
                 <iframe width='100%' height='100%' src="https://www.youtube.com/embed/hBgsDegTTrY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
@@ -810,19 +818,27 @@
       <div class="flex">
         <div class="alumno">
           <p>David Chavarri</p>
-          <p class="caption">Información de contacto</p>
+          <p class="caption">chavarridavid@gmail.com</p>
         </div>
         <div class="alumno">
           <p>Elena Valea</p>
           <p class="caption">elenavalea@gmail.com</p>
+          <a href="assets/portfolio_ELENA_VALEA_jun21.pdf" class="caption onyellow" style="font-size: 12.944px;">Portfolio</a>
         </div>
         <div class="alumno">
           <p>Natalia Acosta</p>
           <p class="caption">deseografico.natalia@gmail.com</p>
+          <p>
+            <a href="assets/portfolio_NataliaAcosta_2021_DIGITAL.pdf" class="caption onyellow" style="font-size: 12.944px;">Portfolio</a>
+          </p>
+          <p>
+            <a href="https://www.youtube.com/channel/UCR33guNmTqDBiRoep4h5AtA" class="caption onyellow" style="font-size: 12.944px;">Canal de YT: Deseo Gráfico</a>
+
+          </p>
         </div>
         <div class="alumno">
           <p>Pablo Peralta</p>
-          <p class="caption">Información de contacto</p>
+          <p class="caption">pperalta2609@esdmadrid.es</p>
         </div>
 
 
